这是去掉了1Dtoken的训练方法
Signed-off-by: wangbei <13011847+wangbei1213811@user.noreply.gitee.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,7 @@
 	url  = https://gitee.com/jia_wei_nan/1-d-tokenizer
 	path = train_with_1D
 
+[submodule "train_without_1D"]
+	url  = https://gitee.com/jia_wei_nan/1-d-tokenizer
+	path = train_without_1D
+
